--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,14 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Ignore personal files and specific directories
+/Packages/
+/Assets/Audio/
+/Assets/Custom Material/
+/Assets/Prefabs/
+/Assets/Imports/
+/Assets/Sprites/
+/Assets/Samples/
+/Assets/XR/
+/Assets/XRI/
